Fixed footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2847,7 +2847,7 @@ form#newsletter input[type=submit] {
 
 	iframe {
 		position: relative;
-		left: 30px;
+		left: 10px;
 		width: 300px;
 	}
 
